Try to fix modal position on mobile devices

--- a/frontend/UI/ModalBackdrop/ModalBackdrop.module.scss
+++ b/frontend/UI/ModalBackdrop/ModalBackdrop.module.scss
@@ -5,8 +5,8 @@
     top: 0;
     left: 0;
 
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
 
     @include flex-center;
 
